# 3DMMForever

./: .gitignore  CMakeLists.txt
bren/: bwld.cpp  tmap.cpp  zbmp.cpp
bren/inc/: bren.h  bwld.h  tmap.h  zbmp.h
cmake/: TargetChompSources.cmake
inc/: actor.h  ape.h  bkgd.h  body.h  browser.h  esl.h  helpres.h  kidgs.chh  modl.h  movie.h  msnd.h  mtrl.h  popup.h  portf.h  scene.h  scnsort.h  sitobren.h  soc.h  socutil.h  splot.h  srec.h  stdiodef.h  stdioscb.h  studio.h  tagl.h  tagman.h  tatr.h  tbox.h  tdf.h  tdt.h  tgob.h  tmpl.h  utest.h  utestres.h
kauai/doc/: chunk.txt  file.txt  glossary.txt  groups.txt
kauai/src/: appb.cpp  appb.h  appbmac.cpp  appbwin.cpp  base.cpp  base.h  chcm.cpp  chcm.h  chse.cpp  chse.h  chunk.cpp  chunk.h  clip.cpp  clip.h  clok.cpp  clok.h  cmd.cpp  cmd.h  codec.cpp  codec.h  crf.cpp  crf.h  csapi.h  ctl.cpp  ctl.h  cursor.cpp  cursor.h  dlg.cpp  dlg.h  dlgmac.cpp  dlgwin.cpp  docb.cpp  docb.h  file.cpp  file.h  filemac.cpp  filewin.cpp  fni.h  fnimac.cpp  fniwin.cpp  (+85 more)
kauai/tools/: chdoc.cpp  chdoc.h  ched.cpp  ched.h  ched.rc  chelp.cpp  chelp.h  chelp.rc  chelpdmp.cpp  chelpexp.cpp  chelpexp.h  chgrp.cpp  chhex.cpp  chmbmp.cpp  chmerge.cpp  chomp.cpp  chomp.h  chpic.cpp  chtop.cpp  chtxt.cpp  kpack.cpp  mkmbmp.cpp
lib3dmm/: CMakeLists.txt  go.cmd
lib3dmm/inc/: lib3dmm.h
lib3dmm/src/: lib3dmm.cpp  main.cpp
src/building/: backstag.cht  bldghd.cht  inspirat.cht  lobby.cht  projects.cht  snackbar.cht  studiobg.cht  theatre.cht  ticket.cht
src/engine/: actor.cpp  (+17 more)
tools/: mktmap.cpp  pbmtobmp.cpp  sitobren.cpp  tdfmake.cpp
(+67 files in other folders)
